[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/player.png" type="Texture" id=1]
[ext_resource path="res://objects/CavePlayer.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[node name="CavePlayer" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -1 )
hframes = 4

[node name="Sprite_MirrorL" type="Sprite" parent="."]
position = Vector2( -320, 0 )
texture = ExtResource( 1 )
offset = Vector2( 0, -1 )
hframes = 4

[node name="Sprite_MirrorR" type="Sprite" parent="."]
position = Vector2( 320, 0 )
texture = ExtResource( 1 )
offset = Vector2( 0, -1 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )
